tests/ui/typeck/recursive_types.stderr
error: recursive struct definition
  --> ROOT/tests/ui/typeck/recursive_types.sol:LL:CC
   |
LL |       struct A {
   |  _____^
LL | |         B b;
LL | |     }
   | |_____^
   |

error: recursive struct definition
  --> ROOT/tests/ui/typeck/recursive_types.sol:LL:CC
   |
LL |       struct B {
   |  _____^
LL | |         A a;
LL | |     }
   | |_____^
   |

error: recursive types cannot be parameter or return types of public functions
  --> ROOT/tests/ui/typeck/recursive_types.sol:LL:CC
   |
LL |     function c(C memory) public {}
   |                ^
   |

error: name has to refer to a valid user-defined type
  --> ROOT/tests/ui/typeck/recursive_types.sol:LL:CC
   |
LL |     function d(E1 memory) public {}
   |                ^^
   |

error: name has to refer to a valid user-defined type
  --> ROOT/tests/ui/typeck/recursive_types.sol:LL:CC
   |
LL |     function e(E2 memory) public {}
   |                ^^
   |

error: the underlying type of UDVTs must be an elementary value type
  --> ROOT/tests/ui/typeck/recursive_types.sol:LL:CC
   |
LL |     type U1 is U1;
   |                ^^
   |

error: name has to refer to a valid user-defined type
  --> ROOT/tests/ui/typeck/recursive_types.sol:LL:CC
   |
LL |     event E1(E2);
   |              ^^
   |

error: name has to refer to a valid user-defined type
  --> ROOT/tests/ui/typeck/recursive_types.sol:LL:CC
   |
LL |     event E2(E1);
   |              ^^
   |

error: aborting due to 8 previous errors

